# model3d-gl-sdl-example

./: Cargo.toml  sdp.json
shaders/: fragment.glsl  vertex.glsl
src/: base_shader.rs  bone.rs  bone_pose.rs  bone_pose_set.rs  bone_set.rs  buffer.rs  buffer_data.rs  buffer_view.rs  byte_buffer.rs  hierarchy.rs  instance.rs  instantiable.rs  lib.rs  main.rs  material.rs  model.rs  objects.rs  traits.rs  transformation.rs  types.rs
tests/: test_bones.rs
