[package]
name = "model3d-gl-sdl-example"
version = "0.1.1"
edition = "2021"

[dependencies]
gl = "0.14.0"
geo-nd         = "0.5"
model3d-base   = { path="../model3d-base", version=">=0.3" }
model3d-gl     = { path="../model3d-gl", version="0.1", default-features=false, features=["opengl"] }
sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
serde_json = "1.0.117"

[dependencies.model3d-gltf]
version = "0.0.1"
path = "../model3d-gltf"

